--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: wp-hrm-DEV
-Theme URI: https://myawesometheme.awesome
-Author: Tadej Stanic
-Author URI: https://www.linkedin.com/in/tadejstanic
+Theme Name: Webpack Theme DEV
+Theme URI: https://underscores.me
+Author: Amoury
+Author URI: http://www.amourycodes.com
 Description: The theme for my awesome site
-Version: 1.0
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: my-fist-theme
