--- a/src/scss/variables-site/_typography.scss
+++ b/src/scss/variables-site/_typography.scss
@@ -1,3 +1,8 @@
 @font-face {font-family: 'oranienbaumregular';src: url('../assets/fonts/oranienbaum.eot');src: url('../assets/fonts/oranienbaum.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/oranienbaum.woff2') format('woff2'),url('../assets/fonts/oranienbaum.woff') format('woff'),url('../assets/fonts/oranienbaum.ttf') format('truetype');}
 
 $font__orani: "oranienbaumregular", sans-serif;
+$font__main: sans-serif;
+$font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+$font__pre: "Courier 10 Pitch", Courier, monospace;
+$font__line-height-body: 1.5;
+$font__line-height-pre: 1.6;
